# ocaml-snippets

./: README.md
message_passing/: README.md  dune-project  message_passing.opam
message_passing/test/: dune
multicore_ocaml/: README.md  dune-project  multicore_ocaml.opam
multicore_ocaml/lib/: dune
shared_memory_I/: dune-project
shared_memory_I/src/: increment_threads.ml  lock_increment_threads.ml  print_threads.ml
shared_memory_II/: dune-project  shared_memory.opam
